--- a/index2.html
+++ b/index2.html
@@ -10,10 +10,10 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,700%7CRoboto:400,500,700%7CRoboto+Condensed%7CLato:400,700" rel="stylesheet" type="text/css">
 
     <!-- load css for cubeportfolio -->
-    <link rel="stylesheet" type="text/css" href="https://roberthunt.com/index2.html/cubeportfolio/css/cubeportfolio.min.css">
-	<link rel="stylesheet" type="text/css" href="https://roberthunt.com/index2.html/cubeportfolio/css/main.css">
-	<link rel="stylesheet" type="text/css" media="all" href="https://roberthunt.com/index2.html/stage/js/fancybox/style.css">
-    <link rel="stylesheet" type="text/css" media="all" href="https://roberthunt.com/index2.html/stage/js/fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" type="text/css" href="https://roberthunt.com/cubeportfolio/css/cubeportfolio.min.css">
+	<link rel="stylesheet" type="text/css" href="https://roberthunt.com/cubeportfolio/css/main.css">
+	<link rel="stylesheet" type="text/css" media="all" href="https://roberthunt.com/stage/js/fancybox/style.css">
+    <link rel="stylesheet" type="text/css" media="all" href="https://roberthunt.com/stage/js/fancybox/jquery.fancybox.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="https://roberthunt.com/index2.html/stage/js/fancybox/jquery.fancybox.js?v=2.0.6"></script>
 </head>
@@ -38,7 +38,7 @@
        <div class="cbp-item film">
             <a href="https://vimeo.com/525943617" class="cbp-caption cbp-lightbox" data-title="Rincon del Mar">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index.html/_include/img/work/thumbs/rincon.jpg" width="570" height="400" alt="Rincon del Mar">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/rincon.jpg" width="570" height="400" alt="Rincon del Mar">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -53,7 +53,7 @@
         <div class="cbp-item film">
             <a href="http://vimeo.com/254063821" class="cbp-caption cbp-lightbox" data-title="Francia<br>Bogota">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index.html/_include/img/work/thumbs/francia.jpg" width="570" height="400" alt="Francia">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/francia.jpg" width="570" height="400" alt="Francia">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -68,7 +68,7 @@
         <div class="cbp-item film">
             <a href="http://vimeo.com/237007180" class="cbp-caption cbp-lightbox" data-title="Mi Mariposa">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index.html/_include/img/work/thumbs/horse.jpg" width="570" height="400" alt="Francia">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/horse.jpg" width="570" height="400" alt="Francia">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -81,9 +81,9 @@
             </a>
         </div>
         <div class="cbp-item photo">
-            <a href="https://roberthunt.com/index.html/_include/img/work/full/pano_full.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Big Sur<br>Big Sur California">
+            <a href="https://roberthunt.com/_include/img/work/full/pano_full.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Big Sur<br>Big Sur California">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/pano_t.jpg" width="570" height="400" alt="Big Sur California">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/pano_t.jpg" width="570" height="400" alt="Big Sur California">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -96,9 +96,9 @@
             </a>
         </div>
         <div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/glacier_full.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Glacier Point<br>Yosemite Californa">
+            <a href="https://roberthunt.com/_include/img/work/full/glacier_full.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Glacier Point<br>Yosemite Californa">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/glacier_thumb.jpg" width="570" height="400" alt="Yosemite Glacier Point">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/glacier_thumb.jpg" width="570" height="400" alt="Yosemite Glacier Point">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -111,9 +111,9 @@
             </a>
         </div>
         <div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/landsend_full.jpg" class="cbp-caption cbp-lightbox" data-title="Lands End<br>Big Sur California">
+            <a href="https://roberthunt.com/_include/img/work/full/landsend_full.jpg" class="cbp-caption cbp-lightbox" data-title="Lands End<br>Big Sur California">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/landsend_t.jpg" width="570" height="400" alt="Big Sur Lands End">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/landsend_t.jpg" width="570" height="400" alt="Big Sur Lands End">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -128,7 +128,7 @@
         <div class="cbp-item film">
             <a href="https://www.youtube.com/watch?v=VBS1G2Clhz8&t=9s" class="cbp-caption cbp-lightbox" data-title="Sophie<br>Flowers">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/sophie_t.jpg" width="570" height="400" alt="Sophie">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/sophie_t.jpg" width="570" height="400" alt="Sophie">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -143,7 +143,7 @@
         <div class="cbp-item film">
             <a href="http://vimeo.com/15544395" class="cbp-caption cbp-lightbox" data-title="Texas State Fair<br>Dallas, Texas">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/fair_t.jpg" width="570" height="400" alt="Texas State Fair">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/fair_t.jpg" width="570" height="400" alt="Texas State Fair">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -156,9 +156,9 @@
             </a>
         </div>
         <div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/dunes_f.jpg" class="cbp-caption cbp-lightbox" data-title="Great Sand Dunes<br>Colorado">
+            <a href="https://roberthunt.com/_include/img/work/full/dunes_f.jpg" class="cbp-caption cbp-lightbox" data-title="Great Sand Dunes<br>Colorado">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/dunes_t.jpg" width="570" height="400" alt="Great Sand Dunes Colorado">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/dunes_t.jpg" width="570" height="400" alt="Great Sand Dunes Colorado">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -171,9 +171,9 @@
             </a>
         </div>
         <div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/arches_f.jpg" class="cbp-caption cbp-lightbox" data-title="Arches NationalPark<br>Moab, Utah">
+            <a href="https://roberthunt.com/_include/img/work/full/arches_f.jpg" class="cbp-caption cbp-lightbox" data-title="Arches NationalPark<br>Moab, Utah">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/arches_t.jpg" width="570" height="400" alt="Arches National Park Moab Utah">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/arches_t.jpg" width="570" height="400" alt="Arches National Park Moab Utah">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -188,7 +188,7 @@
 		<div class="cbp-item film">
             <a href="https://www.youtube.com/watch?v=0RT1vP-MKBY" class="cbp-caption cbp-lightbox" data-title="Timelapse Dallas<br>Dallas, Texas">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/dallas_t.jpg" width="570" height="400" alt="Dallas Texas">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/dallas_t.jpg" width="570" height="400" alt="Dallas Texas">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -201,9 +201,9 @@
             </a>
         </div>
 		<div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/sutter_f.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Sutter Pond<br>Robbins, California">
+            <a href="https://roberthunt.com/_include/img/work/full/sutter_f.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Sutter Pond<br>Robbins, California">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/sutter_t.jpg" width="570" height="400" alt="Robbins California">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/sutter_t.jpg" width="570" height="400" alt="Robbins California">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -216,9 +216,9 @@
             </a>
         </div>
 		<div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/gg_f.png" class="cbp-caption cbp-lightbox" data-title="Garden of the Gods<br>Colorado Springs, Colorado">
+            <a href="https://roberthunt.com/_include/img/work/full/gg_f.png" class="cbp-caption cbp-lightbox" data-title="Garden of the Gods<br>Colorado Springs, Colorado">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/gg_t.jpg" width="570" height="400" alt="Garden of the Gods Colorado Springs">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/gg_t.jpg" width="570" height="400" alt="Garden of the Gods Colorado Springs">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -233,7 +233,7 @@
 		<div class="cbp-item film">
             <a href="https://www.youtube.com/watch?v=Jv7PiJm5BvU" class="cbp-caption cbp-lightbox" data-title="Pump Jack<br>East Texas">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/pump_t.jpg" width="570" height="400" alt="Pump Jack Van Texas">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/pump_t.jpg" width="570" height="400" alt="Pump Jack Van Texas">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -246,9 +246,9 @@
             </a>
         </div>
 		<div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/bandon_f.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Bandon Beach<br>Bandon, Oregon">
+            <a href="https://roberthunt.com/_include/img/work/full/bandon_f.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Bandon Beach<br>Bandon, Oregon">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/bandon_t.jpg" width="570" height="400" alt="Bandon Oregon">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/bandon_t.jpg" width="570" height="400" alt="Bandon Oregon">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -263,7 +263,7 @@
 		<div class="cbp-item film">
             <a href="http://vimeo.com/123100395" class="cbp-caption cbp-lightbox" data-title="Seven Years<br>Sophie">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/seven_t.jpg" width="570" height="400" alt="Sophie Hawaii">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/seven_t.jpg" width="570" height="400" alt="Sophie Hawaii">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -276,9 +276,9 @@
             </a>
         </div>
 		<div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/pb_f.jpg" class="cbp-caption cbp-lightbox" data-title="Pawnee Buttes<br>Colorado">
+            <a href="https://roberthunt.com/_include/img/work/full/pb_f.jpg" class="cbp-caption cbp-lightbox" data-title="Pawnee Buttes<br>Colorado">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/pb_t.jpg" width="570" height="400" alt="Pawnee Buttes Colorado">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/pb_t.jpg" width="570" height="400" alt="Pawnee Buttes Colorado">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -293,7 +293,7 @@
 		<div class="cbp-item film">
             <a href="http://vimeo.com/14185462" class="cbp-caption cbp-lightbox" data-title="Classic Junk<br>Texas">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/junk_t.jpg" width="570" height="400" alt="Classic Junk Texas">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/junk_t.jpg" width="570" height="400" alt="Classic Junk Texas">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -306,9 +306,9 @@
             </a>
         </div>
 		<div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/neptune.jpg" class="cbp-caption cbp-lightbox" data-title="Neptune Beach<br>Big Sur California">
+            <a href="https://roberthunt.com/_include/img/work/full/neptune.jpg" class="cbp-caption cbp-lightbox" data-title="Neptune Beach<br>Big Sur California">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/neptune_t.jpg" width="570" height="400" alt="Big Sur California">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/neptune_t.jpg" width="570" height="400" alt="Big Sur California">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -323,7 +323,7 @@
 		<div class="cbp-item film">
             <a href="http://vimeo.com/13484898" class="cbp-caption cbp-lightbox" data-title="The Groovers<br>Fandango Film Location">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/groovers_t.jpg" width="570" height="400" alt="The Groovers Fandango Movie Tonah Texas">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/groovers_t.jpg" width="570" height="400" alt="The Groovers Fandango Movie Tonah Texas">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -336,9 +336,9 @@
             </a>
         </div>
 		<div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/nb_f.jpg" class="cbp-caption cbp-lightbox" data-title="North Beach<br>Point Reyes, California">
+            <a href="https://roberthunt.com/_include/img/work/full/nb_f.jpg" class="cbp-caption cbp-lightbox" data-title="North Beach<br>Point Reyes, California">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/nb_t.jpg" width="570" height="400" alt="North Beach Point Reyes California">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/nb_t.jpg" width="570" height="400" alt="North Beach Point Reyes California">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -351,9 +351,9 @@
             </a>
         </div>
 		<div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/carmel_f.jpg" class="cbp-caption cbp-lightbox" data-title="Morning in Carmel<br>Big Sur California">
+            <a href="https://roberthunt.com/_include/img/work/full/carmel_f.jpg" class="cbp-caption cbp-lightbox" data-title="Morning in Carmel<br>Big Sur California">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/carmel_t.jpg" width="570" height="400" alt="Big Sur Carmel California">
+                    <img src="https://roberthunt.com/_include/img/work/thumbs/carmel_t.jpg" width="570" height="400" alt="Big Sur Carmel California">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -383,10 +383,10 @@
     
 
     <!-- load cubeportfolio -->
-    <script type="text/javascript" src="https://roberthunt.com/index2.html/stage/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
+    <script type="text/javascript" src="https://roberthunt.com/stage/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
 
     <!-- init cubeportfolio -->
-    <script type="text/javascript" src="https://roberthunt.com/index2.html/stage/js/main.js"></script>
+    <script type="text/javascript" src="https://roberthunt.com/stage/js/main.js"></script>
 	
 	
 	
